2006-06-20  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m:
	- Fixed a bug while checking if filtering of stage position from input edited file is possible.

2006-06-19  Jeremy Cribb <jcribb@email.unc.edu>
	* video_tracking_constants.m: added PULSE and SEQ to column headers.
	* remove_drift.m: only existing trackers are queried.

2006-06-16  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m:
	- Now facilitates filtering of stage sensed position even when the saved .edited.mat file has unfiltered stage position. 
	- This is possible for only a limited set of circumstances e.g. EITHER bead & error signal OR stage have to be present in saved file.
	- Fixed documentation.

2006-06-15  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m:
	- For .edited format, now stores the name at the time of loading as the current name of the file.
	- If this name is different than the name stored, designates the stored name as the previous name.
	- Same for path. This helps in tracking down the changes made to the location of the file.

2006-06-05  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: Fixed a typo.

2006-04-24  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: Fixed a bug in handling drift as well as time-offset when loading an edited.mat file.

2006-04-21  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: 
	- Now correctly handles change in the flags when edited file is loaded with new flags.
2006-04-11  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: 
	- Option to load files by filtering out stage noise.
	- Fixed a bug in handling QPD values
	- handles files saving and loading correctly

2006-04-07  Kalpit Desai <kvdesai@email.unc.edu>
	* load_laser_tracking.m: Fixed a bug in removing time offset, when offset was zero. Corrected stagezReport to stageReport.

2006-02-03  Jeremy Cribb <jcribb@email.unc.edu>